When CV_MODE setting is True, we hiding menu and doing 302 redirect ot about page

--- a/src/base/jinja2/base/macro/_base.jinja2
+++ b/src/base/jinja2/base/macro/_base.jinja2
@@ -37,17 +37,19 @@
                 <a class="navbar-brand" href="{{ url('blog:index') }}">{{ settings.SITE_TITLE }}</a>
             </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="{{ url('blog:index') }}">{{ _('Главная') }}</a>
-                    </li>
-                    <li>
-                        <a href="{{ url('pages:about') }}">{{ _('Обо мне') }}</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+            {% if not settings.CV_MODE %}
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="{{ url('blog:index') }}">{{ _('Главная') }}</a>
+                        </li>
+                        <li>
+                            <a href="{{ url('pages:about') }}">{{ _('Обо мне') }}</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            {% endif %}
         </div>
         <!-- /.container -->
     </nav>
