About page: fix some mistypes and grammar mistakes

--- a/src/pages/jinja2/pages/about.jinja2
+++ b/src/pages/jinja2/pages/about.jinja2
@@ -13,17 +13,17 @@
     <div class="container about">
         <p>
             {% trans %}Я инженер-программист, специализирующийся на веб-разработке. На данный момент живу в Минске.
-                С декабря 2013 года основная технология, которую я использую - Python, но я стараюсь не ассациировать
+                С декабря 2013 года основная технология, которую я использую - Python, но я стараюсь не ассоциировать
                 свою работу с конкретной технологией в целом: я не <nobr>Python-разработчик</nobr> - я <nobr>веб-разработчик</nobr> :){% endtrans %}
         </p>
         <p>
-            {% trans %}До того как я начал программировать на языке Python я использовал PHP.
-                Продолжительный период своей жизни я занимался версткой веб-сайтов и веб-приложений и
-                я люблю вспоминать этот опыт, но заниматься версткой в ближайшее время желания нет.{% endtrans %}
+            {% trans %}До того, как я начал программировать на языке Python, я использовал PHP.
+                Продолжительный период своей жизни я занимался версткой веб-сайтов и веб-приложений.
+                Я люблю вспоминать этот опыт, но заниматься версткой в ближайшее время желания нет.{% endtrans %}
         </p>
         <p>
-            {% trans SITE_TITLE=settings.SITE_TITLE %}Кроме разработки, мне интересно направление <abbr title="Development operations">DevOps</abbr>
-                автоматизации: я эксперементирую c Docker, etc.d, conf.d и другими инструментами.
+            {% trans SITE_TITLE=settings.SITE_TITLE %}Кроме разработки мне интересно направление <abbr title="Development operations">DevOps</abbr>
+                автоматизации: я экспериментирую c Docker, etc.d, conf.d и другими инструментами.
                 Кстати, {{ SITE_TITLE }} запущен на Docker.{% endtrans %}
         </p>
 
