--- a/src/base/jinja2/base/_base.jinja2
+++ b/src/base/jinja2/base/_base.jinja2
@@ -14,13 +14,14 @@
 
         {% block document_css %}
             <link href="{{ static('base/css/bootstrap.min.css') }}" rel="stylesheet">
+            <link href="{{ static('base/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
+            <link href="{{ static('base/css/fonts.css') }}" rel="stylesheet">
+{#            <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>#}
+{#            <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>#}
             <link href="{{ static('css/styles.min.css') }}" rel="stylesheet">
-            <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-            <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-            <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
             <!--[if lt IE 9]>
-                <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-                <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+                <script src="{{ static('base/js/html5shiv.min.js') }}"></script>
+                <script src="{{ static('base/js/respond.min.js') }}"></script>
             <![endif]-->
         {% endblock %}
     </head>
